feat: add reporting deps

--- a/package.json
+++ b/package.json
@@ -17,19 +17,29 @@
     "test-one-logs": "_TESTING=1  _FORCELOGS=1 npx playwright test --timeout 300000 --retries 0 ./run/test/**/*.spec.ts --grep",
     "test-parallel": "_TESTING=1 npx playwright test ./run/test/**/*.spec.ts --grep ios",
     "test-high-risk-android": "_TESTING=1 npx playwright test --timeout 300000 ./run/test/**/*.spec.ts --grep 'android @high-risk'",
-    "test-high-risk-ios": "_TESTING=1 npx playwright test --timeout 300000 ./run/test/**/*.spec.ts --grep 'ios @high-risk'"
+    "test-high-risk-ios": "_TESTING=1 npx playwright test --timeout 300000 ./run/test/**/*.spec.ts --grep 'ios @high-risk'",
+    "allure-close": "ts-node closeRun.ts",
+    "allure-open": "allure open ./allure/allure-report/",
+    "allure-publish": "ts-node publishReport.ts"
+
   },
   "devDependencies": {
     "@appium/execute-driver-plugin": "^3.0.1",
     "@appium/images-plugin": "^3.0.17",
     "@eslint/js": "^9.14.0",
+    "@types/fs-extra": "^11",
+    "@types/gh-pages": "^6",
     "@types/lodash": "^4.14.191",
     "@types/node": "^20.14.10",
     "@types/sinon": "^17.0.3",
+    "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.59.5",
     "@wdio/types": "^8.1.2",
+    "allure": "^3.0.0-beta.9",
     "eslint": "^9.14.0",
+    "fs-extra": "^11.3.0",
+    "gh-pages": "^6.3.0",
     "globals": "^15.12.0",
     "lodash": "^4.17.21",
     "looks-same": "^9.0.1",
